--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,124 @@
     <name>Web UI compressor</name>
     <url>http://wuic.github.io</url>
 
+    <repositories>
+        <repository>
+            <id>rubygems-proxy-releases</id>
+            <name>RubyGems.org Proxy (Releases)</name>
+            <url>http://rubygems-proxy.torquebox.org/releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>rubygems</groupId>
+            <artifactId>asciidoctor-diagram</artifactId>
+            <version>${asciidoctor-diagram.version}</version>
+            <type>gem</type>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>rubygems</groupId>
+                    <artifactId>asciidoctor</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
+            <!-- ASCII DOCTOR -->
+            <plugin>
+                <groupId>de.saumya.mojo</groupId>
+                <artifactId>gem-maven-plugin</artifactId>
+                <version>${gem-maven-plugin.version}</version>
+                <configuration>
+                    <jrubyVersion>${jruby.version}</jrubyVersion>
+                    <gemHome>${project.build.directory}/gems</gemHome>
+                    <gemPath>${project.build.directory}/gems</gemPath>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>initialize</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>${asciidoctor-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>output-html</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>html</backend>
+                            <outputDirectory>${wuic.basePath}</outputDirectory>
+                            <requires>
+                                <require>asciidoctor-diagram</require>
+                            </requires>
+                            <gemPath>${project.build.directory}/gems-provided</gemPath>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Filter the wuic.xml file with the base path where ASCII doctor output is dropped -->
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <id>copy-wuic-xml</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/resources</directory>
+                                    <includes>
+                                        <include>wuic.xml</include>
+                                    </includes>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+
+                    <!-- Put the site pages in the directory that will be optimized by WUIC -->
+                    <execution>
+                        <id>copy-webapp</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${wuic.basePath}</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/webapp</directory>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- WUIC process all pages in the target/filtered directory -->
             <plugin>
                 <groupId>com.github.wuic.plugins</groupId>
                 <artifactId>static-helper-maven-plugin</artifactId>
@@ -25,9 +141,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <xml>wuic.xml</xml>
-                    <output>${build.finalName}</output>
-                    <output>site</output>
+                    <xml>target/wuic.xml</xml>
+                    <output>${project.artifactId}</output>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -49,12 +164,12 @@
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-all</artifactId>
-                        <version>1.8.9</version>
+                        <version>${groovy-all.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.ant</groupId>
                         <artifactId>ant</artifactId>
-                        <version>1.9.4</version>
+                        <version>${ant.version}</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -79,4 +194,14 @@
             </plugin>
         </plugins>
     </build>
+
+    <properties>
+        <jruby.version>1.7.9</jruby.version>
+        <gem-maven-plugin.version>1.0.5</gem-maven-plugin.version>
+        <asciidoctor-diagram.version>1.2.1</asciidoctor-diagram.version>
+        <asciidoctor-maven-plugin.version>1.5.2</asciidoctor-maven-plugin.version>
+        <groovy-all.version>1.8.9</groovy-all.version>
+        <ant.version>1.9.4</ant.version>
+        <wuic.basePath>${project.build.directory}/filtered</wuic.basePath>
+    </properties>
 </project>
