Migrates Java Config to ASCII Doctor.

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
                             <attributes>
                                 <!-- repositories must be checkouted in the same directory -->
                                 <extension-repository>${project.basedir}/../wuic-extensions/</extension-repository>
+                                <wuic-repository>${project.basedir}/../web-ui-compressor/</wuic-repository>
                             </attributes>
                         </configuration>
                     </execution>
