Build time: Produce a JAR with META-INF/resources entry.
This allows to let the server serves resources according to servlet 3 standards.

Fixes #188

--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,7 @@
                     <useRegex>true</useRegex>
                     <path>[a-z\-]*.html</path>
                     <baseDir>${wuic.basePath}</baseDir>
+                    <packageAsJar>false</packageAsJar>
                 </configuration>
                 <dependencies>
                     <dependency>
