Create a HTML compressor engine based on atto-parser.
Fixes #234

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
                 <dependencies>
                     <dependency>
                         <groupId>com.github.wuic.extensions</groupId>
+                        <artifactId>wuic-attoparser</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.github.wuic.extensions</groupId>
                         <artifactId>wuic-htmlcompressor</artifactId>
                         <version>${project.version}</version>
                     </dependency>
