Adds support for hazelcast.
This commit introduces a cache engine relying on Hazelcast framework. The approach is very similar to the existing EhCache support.

Fixes #72

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
                     </dependency>
                     <dependency>
                         <groupId>com.github.wuic.extensions</groupId>
+                        <artifactId>wuic-hazelcast</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.github.wuic.extensions</groupId>
                         <artifactId>wuic-ftp</artifactId>
                         <version>${project.version}</version>
                     </dependency>
